--- a/fe-study/fe-01.html
+++ b/fe-study/fe-01.html
@@ -7,92 +7,97 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>基本情報技術者試験学習録①</h1>
-  <h2>目次</h2>
-  <ul>
-    <li>はじめに</li>
-    <li>基本情報技術者試験とは</li>
-    <li>きっかけ</li>
+  <div class = "title">
+      <h1>基本情報技術者試験学習録①</h1>
+  </div>
+  <div class = "form">
+    <h2>目次</h2>
       <ul>
-        <li>進路や就職に有利だから</li>
-        <li>余っている時間を有効的に活用したかったから</li>
-        <li>達成感を得たいから</li>
+        <li><a href="#1">はじめに</a></li>
+        <li><a href="#2">基本情報技術者試験とは</a></li>
+        <li><a href="#3">きっかけ</a></li>
+          <ul>
+            <li><a href="#3-1">進路や就職に有利だから</a></li>
+            <li><a href="#3-2">余っている時間を有効的に活用したかったから</a></li>
+            <li><a href="#3-3">達成感を得たいから</a></li>
+          </ul>
+        <li><a href="#4">勉強方法</a></li>
+        <ol>
+          <li><a href="#4-1">テキスト（本）を一冊用意する</a></li>
+          <li><a href="#4-2">過去問をひたすら復習する</a></li>
+          <li><a href="#4-3">アウトプットを忘れない</a></li>
+        </ol>
+        <li><a href="#5">さいごに</a></li>
       </ul>
-    <li>勉強方法</li>
-    <ol>
-      <li>テキスト（本）を一冊用意する</li>
-      <li>過去問をひたすら復習する</li>
-      <li>アウトプットを忘れない</li>
-    </ol>
-    <li>さいごに</li>
-  </ul>
-  <h2>はじめに</h2>
-  <p>
-    いきなりですが皆さんは、何か「資格」をお持ちでしょうか。高校受験の時勧められた英語検定や漢字検定。専門系の学校に通っている方は第一種（第二種）電気工事士等色々な種類の資格があると思います。
-    <br>
-    さて、その色々な資格がある中で今回注目したいのは「基本情報技術者試験」というものです。
-  </p>
-  <h2>基本情報技術者試験とは</h2>
-  <p>
-    学校や職場が情報系の方は聞いたことがあるかもしれません。詳しくは <a href="https://www.jitec.ipa.go.jp/1_11seido/fe.html">公式サイト</a> を参照していただきたいと思いますが、IPA（情報処理推進機構）により行われている国家資格になります。省略すると「FE」。この資格の対象者像は「高度IT人材となるために必要な基本的知識・技能をもち、実践的な活用能力を身に付けた者（IPA公式より引用）」とされており、実際IT業界では会社から取得を迫られることがあるようです。
-    <br>
-    まあ分かりやすく言うならば、CMでたまに出てくる「ITパスポート」のレベルが上がったものと言う感じでしょうか。
-  </p>
-  <p class = "pimg">
-  <img src="https://www.jitec.ipa.go.jp/1_11seido/taikei.png" alt="資格の区分" class = "ww">
-  <br>
-  区分図（IPA公式より引用）
-  </p>
-  <p>
-    毎年の４月の第三日曜日と、10月の第三日曜日に試験が設けられており、前回（H30秋）の応募者数は155,928名で合格率は25.6%でした。４人に１人が合格する確率というのは広い門か狭い門か人によって捉え方が異なると思いますが、どちらにしろ勉強しっかりすれば合格できるはず！
-    <br>
-    午前試験と午後試験（いずれも試験時間150分）に分けられており、午前は基礎知識の暗記と計算、午後は午前の部分の応用問題といった感じです。怖いのが仮に午前に合格したが午後は合格できなかったという場合、次回からは午前免除になるという措置が無いので一気に両方合格する必要があります。
-  </p>
-  <h2>きっかけ</h2>
-  <p>この資格を取ろうと思ったきっかけは３つほどあります。</p>
-  <ul>
-    <li>進路や就職に有利だから</li>
+    <h2 id="1">はじめに</h2>
       <p>
-        履歴書を書く際には「資格」の項目がありますよね。自分はそこに書けるほどの資格があまりにも少なく、書いてて虚しい気持ちになることがよくあります...。もともとIT系（パソコンとかスマホとか）は興味があるので、この際何かに活かせないかと考えたところ「そうだ、資格を取ろう」と思ったわけです。これが一番大きな要因ですね。私と同じように、IT系が好きで</p>
-      </p>
-    <li>余っている時間を有効的に活用したかったから</li>
-      <p>
-        将来はIT系の職業に就きたいと思っているのですが、結局将来的に基本情報技術者試験（以降「FE」と記述します）を取ると考えた際、時間のあまり無さそうな社会人の時に受けるよりかは、今時間がだいぶ空いている学生のうちにとってしまおうというのもあります。
-      </p>
-    <li>達成感を得たいから</li>
-      <p>
-        自分が今持っている資格は数検と英検のみなのですが、合格した時の達成感は普段のテストで良い点を取ったときよりもありましたね。ですがそれらは学校が勧めてきたもの。今回のFEは自分で取りたいと思って挑むので、また違う達成感が得られると思います。
-      </p>
-  </ul>
-  
-  <h2>勉強方法</h2>
-    色々なサイトを見てとりあえず勉強の方針が固まりました。
-    <ol>
-      <li>テキスト（本）を一冊用意する</li>
-        <p>
-          何もかもネットで完結するということは、多分できなくは無いと思うのですが、ちょっと心配ですし、ちゃんとした本が欲しいところ。今回私が用意したのがこちら▼
-            <p class = "pimg">
-              <img src="https://images-na.ssl-images-amazon.com/images/I/811vX-9AP7L.jpg" alt="基本情報技術者合格教本" class = "hh">
-              <br>
-              <a href="https://amzn.to/2D1JTf5">平成31年【春期】/01年【秋期】基本情報技術者 合格教本</a>
-            </p>
-          の２年前である平成29年度版です！
-          <br>
-          そりゃ「え？」ってなると思いますが、実は私２年前に一度受けてまして不合格でした...。なので今回はリベンジという訳なんですね。ですがもう2年前記憶したことは忘れてますし、初めて受けるという気持ちで取り組みたいと思います。２年前の本ですが、多分そこまで変わってないでしょうし大丈夫でしょう。
-        </p>
-      <li>過去問をひたすら復習する</li>
-        <p>
-          午前試験、実は過去問だけで構成されていると言っても過言ではないんです。（多分）実際２年前に受けた時も過去問ばっかりでしたからね。そこでスマホアプリや、個人的におすすめな <a href="https://www.fe-siken.com/">基本情報技術者試験ドットコム</a> といったサイトを活用し、勉強に励みたいと思います。
-        </p>
-      <li>アウトプットを忘れない</li>
-        <p>これまで取り上げたのはインプットの方法でした。ですが勉強はやはりアウトプットも用いることで効率的に記憶されていきます。自分なりにアウトプットする方法は無いかなと考えた時に気づいたものがあります。そうです。今皆さんがご覧になっているこれ、ブログに学習録を上げていくというものです。（ここでようやくタイトル回収）
+        いきなりですが皆さんは、何か「資格」をお持ちでしょうか。高校受験の時勧められた英語検定や漢字検定。専門系の学校に通っている方は第一種（第二種）電気工事士等色々な種類の資格があると思います。
         <br>
-        あと、HTML, CSS, 使うか分かりませんが JavaScript 等の練習にもなりますからね（ぶっちゃけこっちがメインかもしれない）というわけで次回「基本情報技術者試験学習録②」では、実際に勉強したことを書き記していきます。皆さんのお力になれたら幸いです。
+        さて、その色々な資格がある中で今回注目したいのは	
+        <strong class="yellow">「基本情報技術者試験」</strong>というものです。
       </p>
-    </ol>
-  <h2>さいごに</h2>
-    <p>
-      ここまでのご閲覧ありがとうございました。WordPress等使わず、一から本格的に HTML を書いたことが無かったので見にくい部分もあったかと思います。次回から学習内容を記載していきますので、そちらも閲覧していただけるなら幸いです。記事ができましたら、この下にリンクを貼るか、 <a href="https://twitter.com/p_xkai10">Twitter</a> にて宣伝しますので確認していただけたらと思います。二度目になりなりますが、ご閲覧ありがとうございました。
-    </p>
+    <h2 id="2">基本情報技術者試験とは</h2>
+      <p>
+        学校や職場が情報系の方は聞いたことがあるかもしれません。詳しくは <a href="https://www.jitec.ipa.go.jp/1_11seido/fe.html" target="_brank" >公式サイト</a> を参照していただきたいと思いますが、IPA（情報処理推進機構）により行われている国家資格になります。省略すると「FE」。この資格の対象者像は「高度IT人材となるために必要な基本的知識・技能をもち、実践的な活用能力を身に付けた者（IPA公式より引用）」とされており、実際IT業界では会社から取得を迫られることがあるようです。
+        <br>
+        まあ分かりやすく言うならば、CMでたまに出てくる「ITパスポート」のレベルが上がったものと言う感じでしょうか。
+      </p>
+      <p class = "pimg">
+      <img src="https://www.jitec.ipa.go.jp/1_11seido/taikei.png" alt="資格の区分" class = "ww">
+      <br>
+      区分図（IPA公式より引用）
+      </p>
+      <p>
+        毎年の４月の第三日曜日と、10月の第三日曜日に試験が設けられており、前回（H30秋）の応募者数は155,928名で合格率は25.6%でした。４人に１人が合格する確率というのは広い門か狭い門か人によって捉え方が異なると思いますが、どちらにしろ勉強しっかりすれば合格できるはず！残り2, 3ヶ月で頑張りましょう。
+        <br>
+        午前試験と午後試験（いずれも試験時間150分）に分けられており、午前は基礎知識の暗記と計算、午後は午前の部分の応用問題といった感じです。怖いのが<strong class="yellow">仮に午前に合格したが午後は合格できなかったという場合、次回からは午前免除になるという措置が無いので</strong>一気に両方合格する必要があります。
+      </p>
+    <h2 id="3">きっかけ</h2>
+      <p>この資格を取ろうと思ったきっかけは３つほどあります。</p>
+      <ul>
+        <li id="3-1">進路や就職に有利だから</li>
+          <p>
+            履歴書を書く際には「資格」の項目がありますよね。自分はそこに書けるほどの資格があまりにも少なく、書いてて虚しい気持ちになることがよくあります...。もともとIT系（パソコンとかスマホとか）は興味があるので、この際何かに活かせないかと考えたところ「そうだ、資格を取ろう」と思ったわけです。これが一番大きな要因ですね。私と同じように、IT系が好きで今やりたいことを探している方におすすめです。</p>
+          </p>
+        <li id="3-2">余っている時間を有効的に活用したかったから</li>
+          <p>
+            将来はIT系の職業に就きたいと思っているのですが、結局将来的に基本情報技術者試験（以降「FE」と記述します）を取ると考えた際、時間のあまり無さそうな社会人の時に受けるよりかは、今時間がだいぶ空いている学生のうちにとってしまおうというのもあります。
+          </p>
+        <li id="3-3">達成感を得たいから</li>
+          <p>
+            自分が今持っている資格は数検と英検のみなのですが、合格した時の達成感は普段のテストで良い点を取ったときよりもありましたね。ですがそれらは学校が勧めてきたもの。今回のFEは自分で取りたいと思って挑むので、また違う達成感が得られると思います。
+          </p>
+      </ul>
+      
+    <h2 id="4">勉強方法</h2>
+      <p>色々なサイトを見てとりあえず勉強の方針が固まりました。</p>
+        <ol>
+          <li id="4-1">テキスト（本）を一冊用意する</li>
+            <p>
+              何もかもネットで完結するということは、多分できなくは無いと思うのですが、ちょっと心配ですし、ちゃんとした本が欲しいところ。今回私が用意したのがこちら▼
+                <p class = "pimg">
+                  <img src="https://images-na.ssl-images-amazon.com/images/I/811vX-9AP7L.jpg" alt="基本情報技術者合格教本" class = "hh">
+                  <br>
+                  <a href="https://amzn.to/2D1JTf5" target="_brank">平成31年【春期】/01年【秋期】基本情報技術者 合格教本</a>
+                </p>
+              の<strong class="yellow">２年前</strong>である平成29年度版です！
+              <br>
+              そりゃ「え？」ってなると思いますが、<strong class="yellow">実は私２年前に一度受けてまして不合格でした...。</strong>なので今回はリベンジという訳なんですね。ですがもう2年前記憶したことは忘れてますし、初めて受けるという気持ちで取り組みたいと思います。２年前の本ですが、多分そこまで変わってないでしょうし大丈夫でしょう。
+            </p>
+          <li id="4-2">過去問をひたすら復習する</li>
+            <p>
+              午前試験、実は過去問だけで構成されていると言っても過言ではないんです。（多分）実際２年前に受けた時も過去問ばっかりでしたからね。そこでスマホアプリや、個人的におすすめな <a href="https://www.fe-siken.com/" target="_brank">基本情報技術者試験ドットコム</a> といったサイトを活用し、勉強に励みたいと思います。
+            </p>
+          <li id="4-3">アウトプットを忘れない</li>
+            <p>これまで取り上げたのはインプットの方法でした。ですが勉強はやはりアウトプットも用いることで効率的に記憶されていきます。自分なりにアウトプットする方法は無いかなと考えた時に気づいたものがあります。そうです。今皆さんがご覧になっているこれ、<strong class="yellow">ブログに学習録を上げていくというものです。</strong>（ここでようやくタイトル回収）
+            <br>
+            あと、HTML, CSS, 使うか分かりませんが JavaScript 等の練習にもなりますからね（ぶっちゃけこっちがメインかもしれない）というわけで次回「基本情報技術者試験学習録②」では、実際に勉強したことを書き記していきます。皆さんのお力になれたら幸いです。
+          </p>
+        </ol>
+    <h2 id="5">さいごに</h2>
+        <p>
+          ここまでのご閲覧ありがとうございました。WordPress等使わず、一から本格的に HTML を書いたことが無かったので見にくい部分もあったかと思います。次回から学習内容を記載していきますので、そちらも閲覧していただけるなら幸いです。<strong class="yellow">新しい記事ができましたら、この下にリンクを貼るか、 <a href="https://twitter.com/p_xkai10" target="_brank">Twitter</a> にて宣伝</strong>しますので確認していただけたらと思います。二度目になりなりますが、ご閲覧ありがとうございました。
+        </p>
+    </div>
   </body>
 </html>
