--- a/fe-study/fe-01.html
+++ b/fe-study/fe-01.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <title>基本情報技術者試験学習録①</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@p_xkai10">
+  <meta property="og:url" content="https://xkai10.github.io/gh-pages/fe-study/fe-01.html">
+  <meta property="og:title" content="基本情報技術者試験学習録①" />
+  <meta property="og:description" content="基本情報技術者試験学習録">
+  <meta property="og:image" content="http://stat.profile.ameba.jp/profile_images/20101105/12/7e/62/g/o089109181288927040647.gif">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
