--- a/fe-study/fe-01.html
+++ b/fe-study/fe-01.html
@@ -8,7 +8,7 @@
   <meta name="twitter:site" content="@p_xkai10">
   <meta property="og:url" content="https://xkai10.github.io/gh-pages/fe-study/fe-01.html">
   <meta property="og:title" content="基本情報技術者試験学習録①" />
-  <meta property="og:description" content="基本情報技術者試験学習録">
+  <meta property="og:description" content="基本情報技術者試験合格に向け学習録を記述していきます。重要なのはインプットとアウトプット。そしてアウトプットはブログで行ってみるという試みです。">
   <meta property="og:image" content="http://stat.profile.ameba.jp/profile_images/20101105/12/7e/62/g/o089109181288927040647.gif">
   <link rel="stylesheet" href="style.css">
 </head>
